# stereographic-link-prediction

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  main.py  mds.py  mds_cli.py  plot_distances.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
data/: Matching_geneNamesSubtiwiki.xlsx  Rep1_outliers.yaml  Rep2_outliers.yaml  Rep3_outliers.yaml  regulations.csv
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
pl_tests/: main.py
stereographic_link_prediction/Data/: BoolODEDATAModule.py  Distances.py  GeneDataModule.py  GeneDatasets.py  OGBDataModule.py  OGBDatasets.py
stereographic_link_prediction/Models/: MDS.py  Modules.py  Networks.py
stereographic_link_prediction/utils/: plot.py
tests/: test_LinkPredictionModule.py  test_genedatamodules.py  test_genedatasets.py  test_networks.py  test_pytorchlighting_integration.py
