[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "stereographic-link-prediction"
description = "A VAE on basis of the kappa-stereographic models from geoopt for link prediction and node classification."
version = "0.1.1-alpha.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/gatoniel/stereographic-link-prediction"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"
torch = "^1.8.1"
scipy = "^1.6.2"
pandas = "^1.2.3"
openpyxl = "^3.0.7"
geoopt = {git = "https://github.com/gatoniel/geoopt.git", rev = "73cfb5cadb287155a8716be633c266f1b520e222"}
pytorch-lightning = {git = "https://github.com/PyTorchLightning/pytorch-lightning.git", rev = "2f84459d26f9bbbf116a4a9548b309cacfcc510a"}
# torchmetrics = {git = "https://github.com/PyTorchLightning/metrics.git", rev = "383439c54eced235d874d1793f64e4414130f37f"}
torchmetrics = "^0.3.1"
torchvision = "^0.9.1"
ogb = "^1.3.0"
matplotlib = "^3.4.1"
jsonargparse = {extras = ["signatures"], version = "^4.7.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.812"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.4"
nitpick = "^0.26"

safety = "^1.10"

pytest = "^6.2"
pytest-cov = "^2.11"
pytest-randomly = "^3.5"

sphinx = "^3.5"
sphinx-autodoc-typehints = "^1.11"
doc8 = "^0.8"
m2r2 = "^0.2"
tomlkit = "^0.7"
black = "^20.8b1"
pylint = "^2.7.4"
